--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grupo de apoio local de joão pessoa</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;700&display=swap" rel="stylesheet">
@@ -12,13 +12,13 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="../img/inpixio-removebg-image.png"></a>
+            <a href="index.html"><img src="./img/inpixio-removebg-image.png"></a>
             <div class="nav-links">
                 <ul>
-                    <li><a href="../pages/index.html">Home</a></li>
-                    <li><a href="../pages/inscricoes.html">Inscrições</a></li>
-                    <li><a href="../pages/comunidade.html">Comunidade</a></li>
-                    <li><a href="../pages/veja-mais.html">Veja mais</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./pages/inscricoes.html">Inscrições</a></li>
+                    <li><a href="./pages/comunidade.html">Comunidade</a></li>
+                    <li><a href="./pages/veja-mais.html">Veja mais</a></li>
                 </ul>
             </div>
         </nav>
@@ -57,17 +57,17 @@
         <p>Para fortalecer a nossa comunidade de membros e se conectar, nós promovemos:</p>
         <div class="row">
             <div class="community-col">
-                <img src="../img/reuniao.jpg">
+                <img src="./img/reuniao.jpg">
                 <h4>Eventos para famílias</h4>
                 <p>Promovemos eventos especiais para as famílias dos membros da comunidade para consolidar o nosso compromisso uns com os outros e fortalecer os nossos laços.</p>
             </div>
             <div class="community-col">
-                <img src="../img/futebol.jpg">
+                <img src="./img/futebol.jpg">
                 <h4>Eventos sociais</h4>
                 <p>Organizamos eventos sociais para a comunidade, para que todos possam se conhecer, compartilhar experiências e se divertir.</p>
             </div>
             <div class="community-col">
-                <img src="../img/parque.jpg">
+                <img src="./img/parque.jpg">
                 <h4>Lazer ao ar livre</h4>
                 <p>Levamos atividades ao ar livre para a nossa comunidade. Nós acreditamos que um estilo de vida saudável ajuda na recuperação.</p>
             </div>
