--- a/pages/inscricoes.html
+++ b/pages/inscricoes.html
@@ -15,7 +15,7 @@
             <a href="index.html"><img src="../img/inpixio-removebg-image.png"></a>
             <div class="nav-links">
                 <ul>
-                    <li><a href="../pages/index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="../pages/inscricoes.html">Inscrições</a></li>
                     <li><a href="../pages/comunidade.html">Comunidade</a></li>
                     <li><a href="../pages/veja-mais.html">Veja mais</a></li>
