--- a/pages/veja-mais.html
+++ b/pages/veja-mais.html
@@ -12,7 +12,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="../img/inpixio-removebg-image.png"></a>
+            <a href="../index.html"><img src="../img/inpixio-removebg-image.png"></a>
             <div class="nav-links">
                 <ul>
                     <li><a href="../index.html">Home</a></li>
